--- a/rffi/index.html
+++ b/rffi/index.html
@@ -489,7 +489,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="GT">Расширяемые преобразования с помощью GT</h3>
 <div class="paragraph">
-<p>GT&#8201;&#8212;&#8201;это библиотека на основе обобщенного программирования для получения расширяемый преобразований типов данных. Исходный код доступен <a href="https://github.com/Kakadu/GT/tree/v0.3.0">на Github</a>.
+<p>GT&#8201;&#8212;&#8201;это библиотека на основе обобщенного программирования для получения расширяемых преобразований типов данных. Исходный код доступен <a href="https://github.com/Kakadu/GT/tree/v0.3.0">на Github</a>.
 В неё входят:</p>
 </div>
 <div class="ulist">
@@ -506,7 +506,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </div>
 <div class="paragraph">
-<p>Тесты и примеры находятся <a href="https://github.com/Kakadu/GT/tree/v0.3.0/regression">в репозитории</a>. Отдельно хотим отметить <a href="https://github.com/Kakadu/GT/blob/v0.3.0/regression/test840garrique.ml">пример</a> на основе работы J.Garrique "Code reuse through polymorphic variants"</p>
+<p>Установка доступна через Opam с помощью команды</p>
+</div>
+<div class="paragraph">
+<p><code>opam pin add GT git+https://github.com/Kakadu/GT\#v0.3.0</code></p>
+</div>
+<div class="paragraph">
+<p>Тесты и примеры находятся <a href="https://github.com/Kakadu/GT/tree/v0.3.0/regression">в репозитории</a>, а подробные инструкции по установке и использованию <a href="https://github.com/Kakadu/GT/blob/v0.3.0/README.md">в README</a>. Отдельно хотим отметить <a href="https://github.com/Kakadu/GT/blob/v0.3.0/regression/test840garrique.ml">пример</a> на основе работы J.Garrique "Code reuse through polymorphic variants"</p>
 </div>
 </div>
 <div class="sect2">
@@ -556,7 +562,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="_доработка_библиотеки_программирования_на_основе_управляемых_типом_преобразователей_для_языка_oсaml">Доработка библиотеки программирования на основе управляемых типом преобразователей для языка OСaml</h3>
 <div class="paragraph">
-<p>Разработка <a href="#GT">Расширяемые преобразования с помощью GT</a> ведется с 2014 года. В рамках данной работы она была доработана в следующих аспектах</p>
+<p>Разработка библиотеки, описанной в разделе <a href="#GT">Расширяемые преобразования с помощью GT</a>, ведется с 2014 года. В рамках данной работы она была переработана и улучшена в следующих аспектах:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -583,6 +589,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>В ходе экспериментов было установлено, что Ostap показывает сходную с Opal производительность, Menhir работает существенно эффективнее, но обладает меньшей выразительной силой.</p>
 </div>
+<div class="paragraph">
+<p>ССЫЛКА</p>
+</div>
 </div>
 </div>
 </div>
@@ -598,13 +607,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>средств исследования НЕТ</p>
+<p>средств исследования НЕТ (?), кроме быть может средств распечатки AST и форматтера</p>
 </li>
 <li>
-<p>навигации НЕТ</p>
+<p>навигации НЕТ (?)</p>
 </li>
 <li>
-<p>преобразования исходного кода  НЕТ</p>
+<p>преобразования исходного кода  НЕТ (?)</p>
 </li>
 </ul>
 </div>
@@ -632,10 +641,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>форматтер (ССЫЛКА)</p>
 </li>
 <li>
-<p>средства анализа потока данных (А есть ли оно у нас)</p>
+<p>средства анализа потока данных (А есть ли оно у нас?)</p>
 </li>
 <li>
-<p>оптимизирующие преобразования  (А есть ли они у нас)</p>
+<p>оптимизирующие преобразования  (должны быть, ДЮ лучше знает)</p>
 </li>
 <li>
 <p>генерация кода в архитектуру x86</p>
@@ -656,7 +665,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-11 14:32:57 +0300
+Last updated 2020-12-11 17:21:45 +0300
 </div>
 </div>
 </body>
