--- a/rffi/index.html
+++ b/rffi/index.html
@@ -530,7 +530,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="LaMa">Компилятор LaMa</h3>
 <div class="paragraph">
-<p>Учебный компилятор, реализованный с использованием описанных выше подходов, находится по ССЫЛКА. Перед сборкой необходимо установить указанные выше библиотеки.</p>
+<p>Учебный компилятор, реализованный с использованием описанных выше подходов, находится <a href="https://github.com/JetBrains-Research/Lama">на GitHub</a>. Перед сборкой необходимо установить указанные выше библиотеки.</p>
 </div>
 <div class="paragraph">
 <p>Для оценки синтаксического анализатора также был создана отдельная разновидность компилятора ССЫЛКА, на которой сравнение более репрезентативно</p>
@@ -542,7 +542,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="title">Note</div>
 </td>
 <td class="content">
-Официально эти компиляторы приватные, то как именно мы будем их делать публичными вроде бы не обсуждалось. Когда обсудим, я пойму как правильно расставить ссылки.
+Официально эти компиляторы частично приватные, то как именно мы будем их делать публичными вроде бы не обсуждалось. Когда обсудим, я пойму как правильно расставить ссылки.
 </td>
 </tr>
 </table>
@@ -665,7 +665,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-11 17:21:45 +0300
+Last updated 2020-12-11 17:26:06 +0300
 </div>
 </div>
 </body>
