--- a/rffi/index.html
+++ b/rffi/index.html
@@ -610,10 +610,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>средств исследования НЕТ (?), кроме быть может средств распечатки AST и форматтера</p>
 </li>
 <li>
-<p>навигации НЕТ (?)</p>
+<p>навигации нет (и что имелось в виду я не очень понимаю?)</p>
 </li>
 <li>
-<p>преобразования исходного кода  НЕТ (?)</p>
+<p>преобразования исходного кода нет ( и я не очень пойму что понималось?)</p>
 </li>
 </ul>
 </div>
@@ -665,7 +665,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-11 17:26:06 +0300
+Last updated 2020-12-11 17:28:02 +0300
 </div>
 </div>
 </body>
