--- a/rffi/index.html
+++ b/rffi/index.html
@@ -607,13 +607,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>средств исследования НЕТ (?), кроме быть может средств распечатки AST и форматтера</p>
+<p>средств исследования (find usages, но их пока нет)</p>
 </li>
 <li>
-<p>навигации нет (и что имелось в виду я не очень понимаю?)</p>
+<p>навигации (go-to-definition, но их пока нет)</p>
 </li>
 <li>
-<p>преобразования исходного кода нет ( и я не очень пойму что понималось?)</p>
+<p>преобразования исходного кода (rename, но его тоже пока нет)</p>
 </li>
 </ul>
 </div>
@@ -641,10 +641,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>форматтер (ССЫЛКА)</p>
 </li>
 <li>
-<p>средства анализа потока данных (А есть ли оно у нас?)</p>
+<p>средства анализа потока данных (reaching definitions, но пока не сделано)</p>
 </li>
 <li>
-<p>оптимизирующие преобразования  (должны быть, ДЮ лучше знает)</p>
+<p>оптимизирующие преобразования  (DCE, но пока не сделано)</p>
 </li>
 <li>
 <p>генерация кода в архитектуру x86</p>
@@ -665,7 +665,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-11 17:28:02 +0300
+Last updated 2020-12-11 17:40:09 +0300
 </div>
 </div>
 </body>
