--- a/DSLs/index.html
+++ b/DSLs/index.html
@@ -440,7 +440,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="header">
 <h1>Разработка предметно-ориентированных встроенных языков</h1>
 <div id="toc" class="toc">
-<div id="toctitle">Table of Contents</div>
+<div id="toctitle">Оглавление</div>
 <ul class="sectlevel1">
 <li><a href="#_разработанные_программные_средства">Разработанные программные средства</a>
 <ul class="sectlevel2">
@@ -507,7 +507,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Был разработана библиотека для проведения синтаксического анализа с помощью парсер-комбинаторов, которая состоит из непосредственно библиотеки, и DSL как синтаксического расширения (на основе Camlp5) языка OCaml, которое облегчает написание парсеров. Исходный код для библиотеки с использованием мемоизации находится <a href="https://github.com/dboulytchev/ostap/tree/memoCPS">на GitHub</a>. Для её установки воспользуйтесь командой</p>
 </div>
 <div class="paragraph">
-<p><code>opam pin add ostap git@github.com:dboulytchev/ostap\#memoCPS</code></p>
+<p><code>opam pin add ostap git+https://github.com/dboulytchev/ostap\#memoCPS</code></p>
 </div>
 </div>
 <div class="sect2">
@@ -581,7 +581,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-17 22:34:29 +0300
+Last updated 2020-12-18 14:09:19 +0300
 </div>
 </div>
 </body>
