Added image flags near links
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/DSLs/index_eng.html
+++ b/DSLs/index_eng.html
@@ -444,10 +444,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>TODO:</p>
 </div>
+<div class="paragraph">
+<p><span class="image"><img src="Russia-Flag-Free-Download-PNG.png" alt="Russia Flag Free Download PNG" width="5%"></span></p>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-11 00:20:50 +0300
+Last updated 2020-12-19 02:30:57 +0300
 </div>
 </div>
 </body>
