--- a/DSLs/index.html
+++ b/DSLs/index.html
@@ -461,7 +461,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>The variant of this report for english-speaking users is  <a href="index_eng.html">here</a>.</p>
+<p><span class="image"><img src="United-Kingdom-Flag-PNG-Picture.png" alt="United Kingdom Flag PNG Picture" width="5%"></span> The variant of this report for english-speaking users is <a href="index_eng.html">here</a>.</p>
 </div>
 <div class="paragraph">
 <p>Предметно-ориентированные языки (DSL) удобны приразработке программных продуктов тем, что они более удобным образом отражают в своём синтаксисе предметную область, и тем самым облегчают процесс разработки. Предметны-ориентированные языки бывают внешние и встроенные.
@@ -581,7 +581,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-18 14:09:19 +0300
+Last updated 2020-12-19 02:27:59 +0300
 </div>
 </div>
 </body>
