--- a/DSLs/index.html
+++ b/DSLs/index.html
@@ -528,7 +528,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="LaMa">Компилятор LaMa</h3>
 <div class="paragraph">
-<p>Учебный компилятор, реализованный с использованием описанных выше подходов, находится <a href="https://github.com/JetBrains-Research/Lama">на GitHub</a>. Перед сборкой необходимо установить указанные выше библиотеки.</p>
+<p>Учебный компилятор, реализованный с использованием описанных выше подходов, находится <a href="https://github.com/JetBrains-Research/Lama-devel">на GitHub</a>. Перед сборкой необходимо установить указанные выше библиотеки.</p>
 </div>
 <div class="paragraph">
 <p>В рамках работы над компилятором были реализованы следующие возможности:</p>
@@ -556,22 +556,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </li>
 <li>
-<p>Средства навигации (go to definition)</p>
+<p>Средства <a href="https://github.com/JetBrains-Research/Lama-devel/tree/1.00/tools">навигации</a> (go to definition, т.е. resolve имён)</p>
 </li>
 <li>
-<p>Средства исследования кода (find usages, в процессе)</p>
+<p>Средства <a href="https://github.com/JetBrains-Research/Lama-devel/tree/1.00/tools">исследования кода</a> (find usages)</p>
 </li>
 <li>
-<p>Средства преобразования исходного кода (rename, не сделано)</p>
-</li>
-<li>
-<p>Средства анализа потока данных (reaching definitions, не сделано)</p>
-</li>
-<li>
-<p>Оптимизирующие преобразования  (DCE, не сделано)</p>
-</li>
-<li>
-<p>Генерация кода в архитектуру x86</p>
+<p>Генерация кода в архитектуру x86_32</p>
 </li>
 </ul>
 </div>
@@ -581,7 +572,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-19 02:35:57 +0300
+Last updated 2020-12-31 11:33:34 +0300
 </div>
 </div>
 </body>
