--- a/DSLs/index.html
+++ b/DSLs/index.html
@@ -540,7 +540,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>а также синтакический анализ сокращенного языка LaMa с помощью Menhir (ради сравнения производительности)</p>
+<p>а также синтакический анализ сокращенного языка LaMa <a href="https://github.com/JetBrains-Research/Lama-devel/tree/parsing-experiment">с помощью Menhir</a> (ради сравнения производительности)</p>
 </li>
 </ul>
 </div>
@@ -572,7 +572,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-31 11:33:34 +0300
+Last updated 2020-12-31 13:04:37 +0300
 </div>
 </div>
 </body>
