--- a/zanuda/index.html
+++ b/zanuda/index.html
@@ -11,7 +11,7 @@ Otherwise, have a great day =^.^=
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Clippy Lints</title>
+    <title>Zanuda Lints</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/github.min.css"/>
@@ -246,7 +246,7 @@ Otherwise, have a great day =^.^=
 
     <div class="container" ng-app="clippy" ng-controller="lintList">
         <div class="page-header">
-            <h1>Clippy Lints</h1>
+            <h1>Zanuda Lints</h1>
         </div>
 
         <noscript>
